--- a/public/index.html
+++ b/public/index.html
@@ -1,241 +1,230 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>EEI Internal Audit</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta charset="UTF-8" />
+<title>EEI Internal Audit</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <style>
-    :root {
-      --bg: #050914;
-      --panel: #0b1224;
-      --border: #1e2a4a;
-      --text: #e6ebff;
-      --muted: #9aa4c7;
-      --accent: #4f7cff;
-      --green: #19c37d;
-      --red: #ef4444;
-    }
+<style>
+:root {
+  --bg:#050914;
+  --panel:#0b1224;
+  --border:#1e2a4a;
+  --text:#e6ebff;
+  --muted:#9aa4c7;
+  --accent:#4f7cff;
+  --active:#1f3b8a;
+}
 
-    * { box-sizing: border-box; }
-    body {
-      margin: 0;
-      font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
-      background: radial-gradient(circle at top, #0a1024, #030611);
-      color: var(--text);
-    }
+* { box-sizing:border-box; }
 
-    h1 { margin-bottom: 12px; }
+body {
+  margin:0;
+  font-family:system-ui,-apple-system,Segoe UI,Roboto,sans-serif;
+  background:radial-gradient(circle at top,#0a1024,#030611);
+  color:var(--text);
+}
 
-    .container {
-      max-width: 1200px;
-      margin: 40px auto;
-      padding: 0 20px;
-    }
+.container {
+  max-width:1200px;
+  margin:40px auto;
+  padding:0 20px;
+}
 
-    /* INPUT */
-    .input-row {
-      display: flex;
-      gap: 12px;
-      margin-bottom: 24px;
-    }
+h1 { margin-bottom:14px; }
 
-    input {
-      flex: 1;
-      padding: 14px 16px;
-      border-radius: 10px;
-      border: 1px solid var(--border);
-      background: var(--panel);
-      color: var(--text);
-      font-size: 16px;
-    }
+.input-row {
+  display:flex;
+  gap:12px;
+  margin-bottom:22px;
+}
 
-    button {
-      padding: 14px 22px;
-      border-radius: 10px;
-      border: none;
-      background: linear-gradient(135deg, #4f7cff, #6f9bff);
-      color: white;
-      font-weight: 600;
-      cursor: pointer;
-    }
+input {
+  flex:1;
+  padding:14px 16px;
+  border-radius:10px;
+  border:1px solid var(--border);
+  background:var(--panel);
+  color:var(--text);
+}
 
-    /* GRID */
-    .top-grid {
-      display: grid;
-      grid-template-columns: 1.2fr 1fr;
-      gap: 20px;
-      margin-bottom: 20px;
-    }
+button {
+  padding:14px 22px;
+  border-radius:10px;
+  border:none;
+  background:linear-gradient(135deg,#4f7cff,#6f9bff);
+  color:white;
+  font-weight:600;
+  cursor:pointer;
+}
 
-    .panel {
-      background: linear-gradient(180deg, #0b1224, #060b1c);
-      border: 1px solid var(--border);
-      border-radius: 14px;
-      padding: 20px;
-    }
+.panel {
+  background:linear-gradient(180deg,#0b1224,#060b1c);
+  border:1px solid var(--border);
+  border-radius:14px;
+  padding:20px;
+}
 
-    /* QUADRANT */
-    .quadrant {
-      position: relative;
-      height: 360px;
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      grid-template-rows: 1fr 1fr;
-      gap: 10px;
-    }
+.top-grid {
+  display:grid;
+  grid-template-columns:1.2fr 1fr;
+  gap:20px;
+  margin-bottom:20px;
+}
 
-    .quad {
-      border: 1px dashed var(--border);
-      border-radius: 12px;
-      padding: 26px 14px 14px;
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-start;
-      font-size: 14px;
-    }
+/* QUADRANT */
+.quadrant {
+  position:relative;
+  height:360px;
+  display:grid;
+  grid-template-columns:1fr 1fr;
+  grid-template-rows:1fr 1fr;
+  gap:10px;
+}
 
-    .quad strong {
-      margin-bottom: 6px;
-    }
+.quad {
+  border:1px dashed var(--border);
+  border-radius:12px;
+  padding:30px 16px 16px;
+  font-size:14px;
+}
 
-    .center-score {
-      position: absolute;
-      top: 47%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      width: 120px;
-      height: 120px;
-      border-radius: 50%;
-      background: #060b1c;
-      border: 2px solid var(--accent);
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      z-index: 5;
-    }
+.quad.active {
+  border:2px solid var(--accent);
+  background:rgba(79,124,255,0.08);
+}
 
-    .center-score span {
-      font-size: 34px;
-      font-weight: 700;
-    }
+.quad strong { display:block; margin-bottom:6px; }
 
-    .center-score small {
-      color: var(--muted);
-      font-size: 12px;
-    }
+.center-score {
+  position:absolute;
+  top:47%;
+  left:50%;
+  transform:translate(-50%,-50%);
+  width:120px;
+  height:120px;
+  border-radius:50%;
+  background:#060b1c;
+  border:2px solid var(--accent);
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+  justify-content:center;
+  z-index:5;
+}
 
-    /* STRATEGY */
-    .strategy h3 {
-      margin-top: 0;
-    }
+.center-score span {
+  font-size:34px;
+  font-weight:700;
+}
 
-    ul {
-      margin: 8px 0 16px;
-      padding-left: 18px;
-    }
+/* STRATEGY */
+.strategy h3 { margin-top:0; }
 
-    /* SIGNALS */
-    .signals, details {
-      margin-top: 16px;
-    }
+ul { padding-left:18px; }
 
-    details summary {
-      cursor: pointer;
-      font-weight: 600;
-      margin-bottom: 8px;
-    }
+details { margin-top:16px; }
 
-    pre {
-      background: #020617;
-      padding: 14px;
-      border-radius: 10px;
-      overflow-x: auto;
-      font-size: 12px;
-    }
-  </style>
+details summary {
+  cursor:pointer;
+  font-weight:600;
+}
+
+pre {
+  background:#020617;
+  padding:14px;
+  border-radius:10px;
+  font-size:12px;
+  overflow-x:auto;
+}
+</style>
 </head>
 
 <body>
-  <div class="container">
-    <h1>EEI Internal Audit</h1>
+<div class="container">
+  <h1>EEI Internal Audit</h1>
 
-    <div class="input-row">
-      <input id="urlInput" placeholder="example.com" />
-      <button id="runBtn">Run Audit</button>
-    </div>
+  <div class="input-row">
+    <input id="urlInput" placeholder="example.com" />
+    <button id="runBtn">Run Audit</button>
+  </div>
 
-    <div id="results" style="display:none;">
-      <div class="top-grid">
-        <!-- QUADRANT -->
-        <div class="panel">
-          <div class="quadrant">
-            <div class="quad">
-              <strong>🚀 AI-First Leader</strong>
-              High Capability · High Intent
-            </div>
-            <div class="quad">
-              <strong>🏰 Sovereign / Defensive Power</strong>
-              High Capability · Low Intent
-            </div>
-            <div class="quad">
-              <strong>🌱 Aspirational Challenger</strong>
-              Medium Capability · High Intent
-            </div>
-            <div class="quad">
-              <strong>⚖️ Cautious Optimizer</strong>
-              Medium Capability · Medium Intent
-            </div>
+  <div id="results" style="display:none;">
+    <div class="top-grid">
 
-            <div class="center-score">
-              <span id="score">–</span>
-              <small>Capability</small>
-            </div>
+      <!-- QUADRANT -->
+      <div class="panel">
+        <div class="quadrant">
+          <div id="q-ai" class="quad">
+            <strong>🚀 AI-First Leader</strong>
+            High Capability · High Intent
+          </div>
+          <div id="q-sovereign" class="quad">
+            <strong>🏰 Sovereign / Defensive Power</strong>
+            High Capability · Low Intent
+          </div>
+          <div id="q-aspire" class="quad">
+            <strong>🌱 Aspirational Challenger</strong>
+            Medium Capability · High Intent
+          </div>
+          <div id="q-cautious" class="quad">
+            <strong>⚖️ Cautious Optimizer</strong>
+            Medium Capability · Medium Intent
+          </div>
+
+          <div class="center-score">
+            <span id="score">–</span>
+            <small>Capability</small>
           </div>
         </div>
-
-        <!-- STRATEGY -->
-        <div class="panel strategy">
-          <h3>Strategy — Pros / Cons</h3>
-          <div id="strategyBox"></div>
-        </div>
       </div>
 
-      <!-- SIGNALS -->
-      <div class="panel signals">
-        <strong>AI Intent Signals (Observed)</strong>
-        <ul id="signalsList"></ul>
+      <!-- STRATEGY -->
+      <div class="panel strategy">
+        <h3>Strategy — Pros / Cons</h3>
+        <div id="strategyBox"></div>
       </div>
-
-      <!-- EVIDENCE -->
-      <details class="panel">
-        <summary>View Evidence</summary>
-        <pre id="evidence"></pre>
-      </details>
-
-      <!-- RAW JSON -->
-      <details class="panel">
-        <summary>Raw JSON (Internal)</summary>
-        <pre id="rawJson"></pre>
-      </details>
     </div>
+
+    <!-- INTENT SIGNALS -->
+    <div class="panel">
+      <strong>AI Intent Signals (Observed)</strong>
+      <ul id="signals"></ul>
+    </div>
+
+    <!-- EVIDENCE -->
+    <details class="panel">
+      <summary>View Evidence</summary>
+      <pre id="evidence"></pre>
+    </details>
+
+    <!-- RAW JSON -->
+    <details class="panel">
+      <summary>Raw JSON (Internal)</summary>
+      <pre id="raw"></pre>
+    </details>
   </div>
+</div>
 
 <script>
 const runBtn = document.getElementById("runBtn");
 const results = document.getElementById("results");
 
+function clearActive() {
+  document.querySelectorAll(".quad").forEach(q=>q.classList.remove("active"));
+}
+
 runBtn.onclick = async () => {
   const url = document.getElementById("urlInput").value.trim();
-  if (!url) return;
+  if(!url) return;
 
   runBtn.disabled = true;
   runBtn.textContent = "Running…";
   results.style.display = "none";
 
   const controller = new AbortController();
-  const timeout = setTimeout(() => controller.abort(), 12000);
+  const UI_TIMEOUT = 9000;
+  const timer = setTimeout(()=>controller.abort(), UI_TIMEOUT);
 
   let data;
   try {
@@ -244,42 +233,48 @@ runBtn.onclick = async () => {
     });
     data = await res.json();
   } catch {
-    alert("Audit timed out — bot defense likely. Classified as LOW intent.");
+    clearTimeout(timer);
+    alert("Audit blocked or timed out. Classified as LOW intent.");
     runBtn.disabled = false;
     runBtn.textContent = "Run Audit";
     return;
   }
-
-  clearTimeout(timeout);
+  clearTimeout(timer);
 
   document.getElementById("score").textContent = data.ecc.score;
 
-  document.getElementById("signalsList").innerHTML =
-    data.intent.signals.map(s => `<li>${s}</li>`).join("");
+  clearActive();
+  if(data.quadrant.includes("AI-First")) document.getElementById("q-ai").classList.add("active");
+  else if(data.quadrant.includes("Sovereign")) document.getElementById("q-sovereign").classList.add("active");
+  else if(data.quadrant.includes("Aspirational")) document.getElementById("q-aspire").classList.add("active");
+  else document.getElementById("q-cautious").classList.add("active");
 
-  document.getElementById("rawJson").textContent =
-    JSON.stringify(data, null, 2);
+  document.getElementById("signals").innerHTML =
+    data.intent.signals.map(s=>`<li>${s}</li>`).join("");
 
   document.getElementById("evidence").textContent =
-    JSON.stringify(data.breakdown, null, 2);
+    JSON.stringify(data.breakdown,null,2);
+
+  document.getElementById("raw").textContent =
+    JSON.stringify(data,null,2);
 
   document.getElementById("strategyBox").innerHTML = `
     <strong>Pros</strong>
     <ul>
-      <li>Strong structural control and brand gravity</li>
-      <li>Resilient to short-term platform shifts</li>
+      <li>Structural authority and control</li>
+      <li>Resilient to platform volatility</li>
     </ul>
     <strong>Cons</strong>
     <ul>
-      <li>AI-native competitors can flank</li>
-      <li>Discovery upside remains unclaimed</li>
+      <li>AI-native challengers can flank</li>
+      <li>Discovery leverage underutilized</li>
     </ul>
-    <div><em>Capability: ${data.ecc.band.toUpperCase()} · Intent: ${data.intent.posture.toUpperCase()}</em></div>
+    <em>Capability: ${data.ecc.band.toUpperCase()} · Intent: ${data.intent.posture.toUpperCase()}</em>
   `;
 
-  results.style.display = "block";
-  runBtn.disabled = false;
-  runBtn.textContent = "Run Audit";
+  results.style.display="block";
+  runBtn.disabled=false;
+  runBtn.textContent="Run Audit";
 };
 </script>
 </body>
