--- a/public/batch-run.html
+++ b/public/batch-run.html
@@ -3,122 +3,151 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>EEI Batch Visibility Audit</title>
+<title>exmxc.ai — EEI Batch Visibility Audit</title>
 <script src="https://cdn.tailwindcss.com"></script>
 
 <style>
-  body{background:#f8fafc}
-  .pill{padding:2px 8px;border-radius:12px;font-size:12px}
-  .pill.observed{background:#dcfce7;color:#065f46}
-  .pill.suppressed{background:#fef9c3;color:#854d0e}
-  .pill.opaque{background:#f1f5f9;color:#475569}
-  .pill.failed{background:#fee2e2;color:#7f1d1d}
-  .json-box{background:#020617;color:#e5e7eb;border-radius:10px;padding:14px;font-size:12px}
-  details summary{cursor:pointer;color:#2563eb}
+  body { background:#f6f7fb; font-family: system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif; }
+  .json-box { background:#0f172a; color:#e2e8f0; padding:1rem; border-radius:0.75rem; font-size:0.9rem; white-space:pre-wrap; overflow-x:auto;}
+  .badge {padding:4px 8px;border-radius:9999px;font-size:11px;font-weight:600;display:inline-block}
+  .badge-observed {background:#dcfce7;color:#166534}
+  .badge-suppressed {background:#fef9c3;color:#854d0e}
+  .badge-opaque {background:#e5e7eb;color:#374151}
+  .badge-failed {background:#fee2e2;color:#7f1d1d}
 </style>
 </head>
 
-<body class="max-w-6xl mx-auto px-6 py-10">
+<body class="max-w-6xl mx-auto py-10 px-5">
 
-<h1 class="text-3xl font-bold text-center mb-1">EEI Batch Visibility Audit (v6.6)</h1>
-<p class="text-center text-gray-500 mb-8">Static-first visibility mapping across entities</p>
+<h1 class="text-3xl font-bold text-gray-900 text-center mb-2">
+  EEI Batch Visibility Audit (v6.6)
+</h1>
+<p class="text-center text-gray-600 text-sm mb-6">
+  Static-first visibility mapping across entities
+</p>
 
-<!-- SUMMARY GRID -->
-<div class="grid grid-cols-2 md:grid-cols-5 gap-3 mb-8">
-  <div class="bg-white border rounded-xl p-4 shadow-sm">
-    <div class="text-xs text-gray-500 uppercase mb-1">Dataset</div>
-    <div id="datasetLabel" class="font-semibold text-gray-900">—</div>
+<!-- ===== SUMMARY ===== -->
+<div class="bg-white border border-gray-200 rounded-xl p-6 shadow-sm mb-8">
+
+  <div class="flex flex-wrap justify-between gap-4">
+    <div>
+      <div class="text-xs uppercase text-gray-500 mb-1">Dataset</div>
+      <div class="font-semibold text-gray-900" id="datasetName">–</div>
+    </div>
+
+    <div>
+      <div class="text-xs uppercase text-gray-500 mb-1">Sites</div>
+      <div class="font-semibold text-gray-900" id="siteCount">0</div>
+    </div>
+
+    <div>
+      <div class="text-xs uppercase text-gray-500 mb-1">Observed Avg ECC</div>
+      <div class="font-semibold text-gray-900" id="avgScore">--</div>
+    </div>
   </div>
 
-  <div class="bg-white border rounded-xl p-4 shadow-sm">
-    <div class="text-xs text-gray-500 uppercase mb-1">Sites</div>
-    <div id="siteTotal" class="font-semibold text-gray-900">—</div>
+  <div class="mt-5 grid grid-cols-4 gap-3 text-center">
+    <div class="bg-emerald-50 border border-emerald-200 rounded-lg p-3">
+      <div class="text-xs text-emerald-700">Observed</div>
+      <div class="text-lg font-bold text-emerald-800" id="countObserved">0</div>
+    </div>
+    <div class="bg-amber-50 border border-amber-200 rounded-lg p-3">
+      <div class="text-xs text-amber-700">Suppressed</div>
+      <div class="text-lg font-bold text-amber-800" id="countSuppressed">0</div>
+    </div>
+    <div class="bg-gray-50 border border-gray-200 rounded-lg p-3">
+      <div class="text-xs text-gray-600">Opaque</div>
+      <div class="text-lg font-bold text-gray-800" id="countOpaque">0</div>
+    </div>
+    <div class="bg-rose-50 border border-rose-200 rounded-lg p-3">
+      <div class="text-xs text-rose-700">Failed</div>
+      <div class="text-lg font-bold text-rose-800" id="countFailed">0</div>
+    </div>
   </div>
 
-  <div class="bg-white border rounded-xl p-4 shadow-sm">
-    <div class="text-xs text-gray-500 uppercase mb-1">Observed</div>
-    <div id="observedCount" class="font-semibold text-emerald-700">—</div>
-  </div>
-
-  <div class="bg-white border rounded-xl p-4 shadow-sm">
-    <div class="text-xs text-gray-500 uppercase mb-1">Suppressed</div>
-    <div id="suppressedCount" class="font-semibold text-amber-700">—</div>
-  </div>
-
-  <div class="bg-white border rounded-xl p-4 shadow-sm">
-    <div class="text-xs text-gray-500 uppercase mb-1">Observed Avg ECC</div>
-    <div id="observedAvgECC" class="font-semibold text-gray-900">—</div>
-  </div>
 </div>
 
-<!-- CONTROLS -->
-<div class="flex flex-col md:flex-row gap-3 items-center mb-8 bg-white border rounded-xl p-5 shadow-sm">
-  <div class="flex-1 w-full">
-    <label class="text-xs text-gray-600 uppercase mb-1 block">Dataset</label>
-    <select id="datasetSelect" class="w-full border rounded-lg px-3 py-2 text-sm bg-white"></select>
+<!-- ===== CONTROLS ===== -->
+<div class="bg-white border border-gray-200 rounded-xl p-6 shadow-sm mb-8 flex flex-col md:flex-row gap-4">
+  <div class="flex-1">
+    <label class="text-xs font-semibold text-gray-600 uppercase mb-1 block">Dataset</label>
+    <select id="datasetSelect" class="border border-gray-300 rounded-lg px-3 py-2 text-sm w-full bg-white">
+      <option>Loading…</option>
+    </select>
   </div>
 
-  <div class="md:w-44 w-full">
-    <button id="runBtn" class="w-full bg-black text-white rounded-lg py-2 text-sm hover:bg-gray-800">
+  <div class="md:w-48">
+    <label class="text-xs font-semibold text-gray-600 uppercase mb-1 block">&nbsp;</label>
+    <button id="runBatchButton" class="bg-black text-white text-sm px-4 py-2 rounded-lg hover:bg-gray-800 w-full">
       Run Batch
     </button>
-    <div id="status" class="text-xs text-gray-500 text-center mt-1">&nbsp;</div>
+    <div id="batchStatus" class="text-xs text-gray-500 mt-2 text-center">&nbsp;</div>
   </div>
 </div>
 
-<!-- RESULTS -->
-<div class="grid md:grid-cols-2 gap-6">
+<!-- ===== GRID ===== -->
+<div class="grid md:grid-cols-2 gap-8">
 
+  <!-- TABLE -->
   <div>
-    <div class="text-lg font-semibold mb-2">Visibility Results</div>
-    <div class="border rounded-xl bg-white shadow-sm max-h-[520px] overflow-auto">
-      <table class="min-w-full text-sm">
-        <thead class="bg-gray-50 sticky top-0">
-        <tr>
-          <th class="px-3 py-2 text-left">URL</th>
-          <th class="px-3 py-2">State</th>
-          <th class="px-3 py-2">Suppression</th>
-          <th class="px-3 py-2">ECC</th>
-          <th class="px-3 py-2">Mode</th>
-        </tr>
+    <h2 class="text-lg font-semibold text-gray-900 mb-3">Visibility Results</h2>
+
+    <div class="border border-gray-200 rounded-xl bg-white shadow-sm max-h-[520px] overflow-auto">
+      <table class="min-w-full text-xs">
+        <thead class="bg-gray-50 border-b border-gray-200 sticky top-0">
+          <tr>
+            <th class="px-3 py-2 text-left font-semibold text-gray-600">URL</th>
+            <th class="px-3 py-2 text-left font-semibold text-gray-600">State</th>
+            <th class="px-3 py-2 text-left font-semibold text-gray-600">Suppression</th>
+            <th class="px-3 py-2 text-left font-semibold text-gray-600">ECC</th>
+            <th class="px-3 py-2 text-left font-semibold text-gray-600">Mode</th>
+          </tr>
         </thead>
-        <tbody id="resultsBody" class="divide-y"></tbody>
+        <tbody id="resultsTableBody" class="divide-y divide-gray-100">
+          <tr><td colspan="5" class="px-3 py-4 text-center text-gray-400">No batch run yet.</td></tr>
+        </tbody>
       </table>
     </div>
   </div>
 
+  <!-- RAW JSON -->
   <div>
-    <details>
-      <summary class="mb-2">Show Raw JSON</summary>
-      <pre id="rawBox" class="json-box">// Awaiting run…</pre>
-    </details>
+    <h2 class="text-lg font-semibold text-gray-900 mb-3">Raw JSON</h2>
+    <pre id="result" class="json-box">// Awaiting batch…</pre>
   </div>
+
 </div>
 
+<footer class="text-center text-xs text-gray-500 mt-10">
+  Powered by <span class="font-semibold text-black">exmxc.ai</span>
+</footer>
+
+<!-- ===== SCRIPT ===== -->
 <script>
-const datasetSelect = document.getElementById("datasetSelect");
-const runBtn = document.getElementById("runBtn");
-const statusEl = document.getElementById("status");
-const rawBox = document.getElementById("rawBox");
-const resultsBody = document.getElementById("resultsBody");
+const els = {
+  runBtn: runBatchButton,
+  result: result,
+  datasetSelect,
+  datasetName,
+  siteCount,
+  avgScore,
+  countObserved,
+  countSuppressed,
+  countOpaque,
+  countFailed,
+  batchStatus,
+  table: resultsTableBody
+};
 
-const datasetLabel = document.getElementById("datasetLabel");
-const siteTotal = document.getElementById("siteTotal");
-const observedCount = document.getElementById("observedCount");
-const suppressedCount = document.getElementById("suppressedCount");
-const observedAvgECC = document.getElementById("observedAvgECC");
-
-/* ================ LOAD DATASETS ================= */
-async function loadDatasets(){
-  try{
-    const res = await fetch("/api/verticals");
-    const data = await res.json();
+async function loadDatasets() {
+  try {
+    const r = await fetch("/api/verticals");
+    const j = await r.json();
     datasetSelect.innerHTML = "";
-    data.verticals.forEach(v=>{
-      const opt = document.createElement("option");
-      opt.value = v.value;
-      opt.textContent = v.label || v.value;
-      datasetSelect.appendChild(opt);
+    j.verticals.forEach(v=>{
+      const o=document.createElement("option");
+      o.value=v.value; o.textContent=v.label||v.value;
+      datasetSelect.appendChild(o);
     });
   } catch {
     datasetSelect.innerHTML="<option value='core-web'>core-web</option>";
@@ -126,98 +155,106 @@ async function loadDatasets(){
 }
 loadDatasets();
 
-/* ================ HELPERS ================= */
-function pill(state){
-  return `<span class="pill ${state}">${state}</span>`;
+/* ===== STATE + FIELD HELPERS (RESTORED) ===== */
+
+function badge(state){
+  const s=(state||"").toString().toLowerCase();
+  if(s==="observed") return `<span class="badge badge-observed">observed</span>`;
+  if(s==="suppressed") return `<span class="badge badge-suppressed">suppressed</span>`;
+  if(s==="opaque") return `<span class="badge badge-opaque">opaque</span>`;
+  if(s==="failed") return `<span class="badge badge-failed">failed</span>`;
+  return "—";
 }
 
-function renderTable(rows){
-  resultsBody.innerHTML="";
+function safeState(r){
+  return r?.state?.label
+      || r?.state?.value
+      || r?.visibility?.state?.label
+      || r?.visibility?.state?.value
+      || "—";
+}
 
-  if(!rows?.length){
-    resultsBody.innerHTML =
-      `<tr><td colspan="5" class="text-center py-3 text-gray-400">No results</td></tr>`;
-    return;
+function safeSuppression(r){
+  return r?.suppression?.reason
+      || r?.visibility?.suppression?.reason
+      || "—";
+}
+
+function safeECC(r){
+  return typeof r?.ecc?.score==="number"
+    ? r.ecc.score.toFixed(2)
+    : "—";
+}
+
+function safeMode(r){
+  return r?.schemaMeta?.rendered ? "rendered" : "static";
+}
+
+/* ===== SUMMARY HELPERS ===== */
+
+function extractAvg(data){
+  return typeof data?.summary?.avgECC==="number" ? data.summary.avgECC : null;
+}
+
+/* ===== RUN BATCH ===== */
+
+els.runBtn.addEventListener("click", async ()=>{
+  const dataset = datasetSelect.value || "core-web";
+  const url = `/api/batch-run?dataset=${dataset}`;
+
+  els.result.textContent="// Running…";
+  els.batchStatus.textContent="Running…";
+
+  try {
+    const res=await fetch(url);
+    const data=await res.json();
+    els.result.textContent=JSON.stringify(data,null,2);
+
+    if(!data.success){
+      els.batchStatus.textContent="Failed";
+      return;
+    }
+
+    const s = data.summary || {};
+    els.datasetName.textContent = data.dataset || dataset;
+    els.siteCount.textContent = s.totalUrls ?? data.totalUrls ?? 0;
+
+    els.countObserved.textContent = s.observed ?? 0;
+    els.countSuppressed.textContent = s.suppressed ?? 0;
+    els.countOpaque.textContent = s.opaque ?? 0;
+    els.countFailed.textContent = s.failed ?? 0;
+
+    const avg = extractAvg(data);
+    els.avgScore.textContent = avg!=null ? avg.toFixed(2) : "--";
+
+    els.batchStatus.textContent="Completed";
+
+    // === TABLE RENDER ===
+    if(Array.isArray(data.results) && data.results.length){
+      els.table.innerHTML="";
+      data.results.forEach(r=>{
+        const tr=document.createElement("tr");
+        tr.innerHTML = `
+          <td class="px-3 py-2">
+            <a href="${r.url}" target="_blank" class="text-blue-600 hover:underline">${r.url}</a>
+          </td>
+          <td class="px-3 py-2">${badge(safeState(r))}</td>
+          <td class="px-3 py-2">${safeSuppression(r)}</td>
+          <td class="px-3 py-2">${safeECC(r)}</td>
+          <td class="px-3 py-2">${safeMode(r)}</td>
+        `;
+        els.table.appendChild(tr);
+      });
+    } else {
+      els.table.innerHTML="<tr><td colspan='5' class='px-3 py-4 text-center text-gray-400'>No results returned.</td></tr>";
+    }
+
+  } catch(err){
+    els.batchStatus.textContent="Error";
+    els.result.textContent=JSON.stringify({error:err.message},null,2);
   }
-
-  rows.forEach(r=>{
-    const state =
-      r?.visibility?.state?.value ??
-      r?.visibility?.state ??
-      r?.state?.value ??
-      r?.state ??
-      "—";
-
-    const suppression =
-      r?.visibility?.suppression?.reason ??
-      r?.suppression?.reason ??
-      "—";
-
-    const ecc =
-      typeof r?.entityScore === "number"
-        ? r.entityScore.toFixed(2)
-        : "—";
-
-    const mode =
-      r?.schemaMeta?.rendered ? "rendered" : "static";
-
-    resultsBody.innerHTML += `
-      <tr>
-        <td class="px-3 py-2">
-          <a href="${r.url}" target="_blank" class="text-blue-600 underline">${r.url}</a>
-        </td>
-        <td class="px-3 py-2 text-center">${pill(state)}</td>
-        <td class="px-3 py-2 text-center">${suppression}</td>
-        <td class="px-3 py-2 text-center">${ecc}</td>
-        <td class="px-3 py-2 text-center">${mode}</td>
-      </tr>`;
-  });
-}
-
-/* ================ SUMMARY ================= */
-function updateSummary(data){
-  datasetLabel.textContent = data.dataset;
-  siteTotal.textContent = data.totalUrls;
-
-  const observed = data.results.filter(r =>
-    (r?.visibility?.state?.value ?? r?.state) === "observed"
-  );
-
-  const suppressed = data.results.filter(r =>
-    (r?.visibility?.state?.value ?? r?.state) === "suppressed"
-  );
-
-  observedCount.textContent = observed.length;
-  suppressedCount.textContent = suppressed.length;
-
-  const eccVals = observed
-    .map(r => r.entityScore)
-    .filter(n => typeof n === "number");
-
-  observedAvgECC.textContent =
-    eccVals.length
-      ? (eccVals.reduce((a,b)=>a+b,0)/eccVals.length).toFixed(2)
-      : "—";
-}
-
-/* ================ RUN BATCH ================= */
-runBtn.addEventListener("click", async ()=>{
-  const dataset = datasetSelect.value;
-  statusEl.textContent = "Running…";
-
-  const res = await fetch(`/api/batch-run?dataset=${dataset}`);
-  const data = await res.json();
-  rawBox.textContent = JSON.stringify(data,null,2);
-
-  if(!data.success){
-    statusEl.textContent = "Batch failed";
-    return;
-  }
-
-  updateSummary(data);
-  renderTable(data.results);
-  statusEl.textContent = "Completed";
 });
 </script>
+
 </body>
 </html>
